--- a/src/WorkflowEngine.Sdk.Persistence.Abstract/WorkflowEngine.Sdk.Persistence.Abstract.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Abstract/WorkflowEngine.Sdk.Persistence.Abstract.csproj
@@ -18,13 +18,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.4.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.5.0-beta01" />
     <PackageReference Include="Nexus.Link.Libraries.SqlServer" Version="2.9.4" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Persistence.Abstract</PackageId>
-    <Version>1.0.1-rc02</Version>
+    <Version>1.0.2-beta01</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -34,6 +34,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.0.2 Refactored ActivityInstance with respect to fields for failed activities.
       1.0.0 First release
     </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
