--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="1.0.1" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.6.1" />
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.8.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.5.0-beta01" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.20.3" />
     <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.29.1" />
   </ItemGroup>
@@ -37,7 +38,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>1.1.0-rc01</Version>
+    <Version>1.2.0-beta01</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -47,6 +48,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.2.0 Refactored ActivityInstance with respect to fields for failed activities
       1.1.0-rc01 New syntax for flow programming
       1.0.5 First release
     </PackageReleaseNotes>
