--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -38,7 +38,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>1.2.0-rc01</Version>
+    <Version>1.3.0-alpha01</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -48,10 +48,11 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      1.2.0 Refactored ActivityInstance with respect to fields for failed activities
-      1.1.0-rc01 New syntax for flow programming
-      1.0.5 First release
-    </PackageReleaseNotes>
+		1.3.0 Implemented WorkflowService and WorkflowAdministrationService
+		1.2.0 Refactored ActivityInstance with respect to fields for failed activities
+		1.1.0-rc01 New syntax for flow programming
+		1.0.5 First release
+	</PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
