--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowMgmt.Abstract" Version="1.0.9-alfa03" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowMgmt.Abstract" Version="1.0.9-rc01" />
     <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="1.0.1" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.7.0" />
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.8.0" />
@@ -49,12 +49,12 @@
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
 	    1.6.0 Support for Cancel workflow
-		1.5.0 Service contract changes, mostly removing child things
-		1.4.0 Added error handling
-		1.3.0 Implemented WorkflowService and WorkflowAdministrationService
-		1.2.0 Refactored ActivityInstance with respect to fields for failed activities
-		1.1.0-rc01 New syntax for flow programming
-		1.0.5 First release
+      1.5.0 Service contract changes, mostly removing child things
+      1.4.0 Added error handling
+      1.3.0 Implemented WorkflowService and WorkflowAdministrationService
+      1.2.0 Refactored ActivityInstance with respect to fields for failed activities
+      1.1.0-New syntax for flow programming
+      1.0.5 First release
 	</PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
