--- a/src/WorkflowEngine.Sdk.AspNet/WorkflowEngine.Sdk.AspNet.csproj
+++ b/src/WorkflowEngine.Sdk.AspNet/WorkflowEngine.Sdk.AspNet.csproj
@@ -25,7 +25,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.AspNet</PackageId>
-    <Version>1.4.0</Version>
+    <Version>1.4.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -35,7 +35,8 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      1.4.0 Support for IDistributedLock
+      1.4.1 Fix: "WorkflowSummaries" route
+	  1.4.0 Support for IDistributedLock
       1.3.5 IntegrationApi controllers abstract
       1.3.4 Fix: Admin/WorkflowsController: activityInstanceId
       1.3.3 WorkflowFormVersionsController PUT
