--- a/src/WorkflowEngine.Sdk.AspNet/WorkflowEngine.Sdk.AspNet.csproj
+++ b/src/WorkflowEngine.Sdk.AspNet/WorkflowEngine.Sdk.AspNet.csproj
@@ -23,13 +23,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AsyncManager.Sdk.AspNet\AsyncManager.Sdk.AspNet.csproj" />
     <ProjectReference Include="..\WorkflowEngine.Sdk\WorkflowEngine.Sdk.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.AspNet</PackageId>
-    <Version>1.5.0</Version>
+    <Version>1.5.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -39,9 +38,10 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.5.1 Removed obsolete dependency
       1.5.0 Moved inbound filter here.
       1.4.1 Fix: "WorkflowSummaries" route
-	  1.4.0 Support for IDistributedLock
+      1.4.0 Support for IDistributedLock
       1.3.5 IntegrationApi controllers abstract
       1.3.4 Fix: Admin/WorkflowsController: activityInstanceId
       1.3.3 WorkflowFormVersionsController PUT
