--- a/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
@@ -41,7 +41,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Persistence.Sql</PackageId>
-    <Version>1.5.0</Version>
+    <Version>1.6.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -51,6 +51,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.6.0 Purge for logs
       1.5.0 Added support for logging
       1.4.0 Added ActivityInstanceRecordCreate.ContextAsJson
       1.3.3 Bump
