--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -26,9 +26,9 @@
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowMgmt.Abstract" Version="3.4.2" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.9.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.9.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.9.2" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.10.2" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.24.2" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.24.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -38,7 +38,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>4.8.2</Version>
+    <Version>4.8.3</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -48,6 +48,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      4.8.3 Bump
       4.8.2 Added LogPurgeSeverityLevelThreshold
       4.8.1 Option for PurgeLogStrategy
       4.7.0 ActivityOption, option for LogSeverityLevelThreshold
