--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -40,7 +40,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>5.0.1</Version>
+    <Version>5.0.2</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -50,6 +50,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      5.0.2 Introduced IWorkflowEngineRequiredCapabilities
       5.0.1 Bump
       5.0.0 New Contract repo
       4.8.4 Bump
